--- a/Index.cshtml
+++ b/Index.cshtml
@@ -1,8 +1,9 @@
-﻿@model IEnumerable<ITShop.Models.GioHang>
+﻿@model ITShop.Models.NguoiDung_ChinhSua
 
 @{
-    ViewData["Title"] = "Giỏ Hàng";
+    ViewData["Title"] = "Hồ sơ khách hàng";
 }
+
 <div class="page-title-overlap bg-dark pt-4">
     <div class="container d-lg-flex justify-content-between py-2 py-lg-3">
         <div class="order-lg-2 mb-3 mb-lg-0 pt-lg-2">
@@ -12,82 +13,180 @@
                         <a class="text-nowrap" asp-area="" asp-controller="Home" asp-action="Index"><i class="ci-home"></i>Trang chủ</a>
                     </li>
                     <li class="breadcrumb-item text-nowrap">
-                        <a asp-area="" asp-controller="SanPham" asp-action="Index">Sản phẩm</a>
+                        <a asp-area="" asp-controller="KhachHang" asp-action="Index">Khách hàng</a>
                     </li>
-                    <li class="breadcrumb-item text-nowrap active" aria-current="page">Giỏ hàng</li>
+                    <li class="breadcrumb-item text-nowrap active" aria-current="page">Hồ sơ</li>
                 </ol>
             </nav>
         </div>
         <div class="order-lg-1 pe-lg-4 text-center text-lg-start">
-            <h1 class="h3 text-light mb-0">Giỏ hàng</h1>
+            <h1 class="h3 text-light mb-0">Hồ sơ khách hàng</h1>
         </div>
     </div>
 </div>
 
 <div class="container pb-5 mb-2 mb-md-4">
     <div class="row">
-        <section class="col-lg-8">
-            <form asp-action="CapNhat">
-                <div class="d-flex justify-content-between align-items-center pt-3 pb-4 pb-sm-5 mt-1">
-                    <h2 class="h6 text-light mb-0">Sản phẩm trong giỏ</h2>
-                    <a class="btn btn-outline-primary btn-sm ps-2" asp-area="" asp-controller="SanPham" asp-action="Index">
-                        <i class="ci-arrow-left me-2"></i>Tiếp tục mua hàng
+        <aside class="col-lg-4 pt-4 pt-lg-0 pe-xl-5">
+            <div class="bg-white rounded-3 shadow-lg pt-1 mb-5 mb-lg-0">
+                <div class="d-md-flex justify-content-between align-items-center text-center text-md-start p-4">
+                    <div class="d-md-flex align-items-center">
+                        <div class="img-thumbnail rounded-circle position-relative flex-shrink-0 mx-auto mb-2 mx-md-0 mb-md-0" style="width:6.375rem;">
+                            <img class="rounded-circle" src="~/img/avatar.jpg" />
+                        </div>
+                        <div class="ps-md-3">
+                            <h3 class="fs-base mb-0">@Model.HoVaTen</h3>
+                            <span class="text-accent fs-sm">@Model.Email</span>
+                        </div>
+                    </div>
+                    <a class="btn btn-primary d-lg-none mb-2 mt-3 mt-md-0" href="#account-menu" data-bs-toggle="collapse" aria-expanded="false">
+                        <i class="ci-menu me-2"></i>Hồ sơ khách hàng
                     </a>
                 </div>
-                @foreach (var item in Model)
-                {
-                    <div class="d-sm-flex justify-content-between align-items-center py-3 border-bottom">
-                        <div class="d-block d-sm-flex align-items-center text-center text-sm-start">
-                            <a class="d-inline-block flex-shrink-0 mx-auto me-sm-4" href="#">
-                                <img src="~/uploads/@item.SanPham.HinhAnh" width="160" />
+                <div class="d-lg-block collapse" id="account-menu">
+                    <div class="bg-secondary px-4 py-3">
+                        <h3 class="fs-sm mb-0 text-muted">Quản lý</h3>
+                    </div>
+                    <ul class="list-unstyled mb-0">
+                        <li class="border-bottom mb-0">
+                            @if (Convert.ToInt32(TempData["SoLuongDonHang"]) > 0)
+                            {
+                                <a class="nav-link-style d-flex align-items-center px-4 py-3" asp-area="" asp-controller="KhachHang" asp-action="DonHangCuaToi">
+                                    <i class="ci-bag opacity-60 me-2"></i>Đơn hàng<span class="fs-sm text-muted ms-auto">@TempData["SoLuongDonHang"]</span>
+                                </a>
+                            }
+                            else
+                            {
+                                <a class="nav-link-style d-flex align-items-center px-4 py-3" href="#">
+                                    <i class="ci-bag opacity-60 me-2"></i>Đơn hàng<span class="fs-sm text-muted ms-auto">0</span>
+                                </a>
+                            }
+                        </li>
+                        <li class="border-bottom mb-0">
+                            <a class="nav-link-style d-flex align-items-center px-4 py-3" href="#">
+                                <i class="ci-heart opacity-60 me-2"></i>Sản phẩm yêu thích<span class="fs-sm text-muted ms-auto">0</span>
                             </a>
-                            <div class="pt-2">
-                                <h3 class="product-title fs-base mb-2">@item.SanPham.TenSanPham</h3>
-                                <div class="fs-lg text-accent pt-2">@string.Format("{0:N0}", item.SanPham.DonGia)<small>đ</small></div>
-                            </div>
-                        </div>
-                        <div class="pt-2 pt-sm-0 ps-sm-3 mx-auto mx-sm-0 text-center text-sm-start" style="max-width:12rem;">
-                            <label class="form-label" for="quantity">Số lượng</label>
-                            <div class="input-group">
-                                <span class="input-group-text">
-                                    <a asp-area="" asp-controller="GioHang" asp-action="Giam" asp-route-id="@item.ID"><i class="ci-arrow-left-circle"></i></a>
-                                </span>
-                                <input class="form-control text-center" type="text" name="SoLuongTrongGio[@item.ID]" min="1" value="@item.SoLuongTrongGio" />
-                                <span class="input-group-text">
-                                    <a asp-area="" asp-controller="GioHang" asp-action="Tang" asp-route-id="@item.ID"><i class="ci-arrow-right-circle"></i></a>
-                                </span>
-                            </div>
-                            <a class="btn btn-link px-0 text-danger" asp-area="" asp-controller="GioHang" asp-action="Xoa" asp-route-id="@item.ID">
-                                <i class="ci-close-circle me-2"></i><span class="fs-sm">Xóa</span>
+                        </li>
+                        <li class="mb-0">
+                            <a class="nav-link-style d-flex align-items-center px-4 py-3" href="#">
+                                <i class="ci-star opacity-60 me-2"></i>Đánh giá sản phẩm<span class="fs-sm text-muted ms-auto">0</span>
                             </a>
-                        </div>
+                        </li>
+                    </ul>
+                    <div class="bg-secondary px-4 py-3">
+                        <h3 class="fs-sm mb-0 text-muted">Thiết lập tài khoản</h3>
                     </div>
-                }
-                <button class="btn btn-outline-accent d-block w-100 mt-4" type="submit">
-                    <i class="ci-loading fs-base me-2"></i>Cập nhật giỏ hàng
-                </button>
-            </form>
-        </section>
-
-        <aside class="col-lg-4 pt-4 pt-lg-0 ps-xl-5">
-            <div class="bg-white rounded-3 shadow-lg p-4">
-                <div class="py-2 px-xl-2">
-                    <div class="text-center mb-4 pb-3 border-bottom">
-                        <h2 class="h6 mb-3 pb-1">Tổng tiền</h2>
-                        <h3 class="fw-normal">@string.Format("{0:N0}", TempData["TongTien"])<small>đ</small></h3>
-                    </div>
-                    <div class="mb-4">
-                        <label class="form-label mb-3" for="order-comments">
-                            <span class="badge bg-info fs-xs me-2">Note</span>
-                            <span class="fw-medium">Ghi chú bổ sung</span>
-                        </label>
-                        <textarea class="form-control" rows="9" id="order-comments"></textarea>
-                    </div>
-                    <a class="btn btn-primary btn-shadow d-block w-100 mt-4" asp-area="" asp-controller="KhachHang" asp-action="DatHang">
-                        <i class="ci-card fs-lg me-2"></i>Đặt hàng
-                    </a>
+                    <ul class="list-unstyled mb-0">
+                        <li class="border-bottom mb-0">
+                            <a class="nav-link-style d-flex align-items-center px-4 py-3 active" asp-area="" asp-controller="KhachHang" asp-action="Index">
+                                <i class="ci-user opacity-60 me-2"></i>Hồ sơ cá nhân
+                            </a>
+                        </li>
+                        <li class="border-bottom mb-0">
+                            <a class="nav-link-style d-flex align-items-center px-4 py-3" href="#">
+                                <i class="ci-location opacity-60 me-2"></i>Sổ địa chỉ
+                            </a>
+                        </li>
+                        <li class="mb-0">
+                            <a class="nav-link-style d-flex align-items-center px-4 py-3" href="#">
+                                <i class="ci-card opacity-60 me-2"></i>Phương thức thanh toán
+                            </a>
+                        </li>
+                        <li class="d-lg-none border-top mb-0">
+                            <a class="nav-link-style d-flex align-items-center px-4 py-3" asp-area="" asp-controller="Home" asp-action="Logout">
+                                <i class="ci-sign-out opacity-60 me-2"></i>Đăng xuất
+                            </a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </aside>
+        <section class="col-lg-8">
+            <div class="d-none d-lg-flex justify-content-between align-items-center pt-lg-3 pb-4 pb-lg-5 mb-lg-3">
+                <h6 class="fs-base text-light mb-0">Cập nhật chi tiết hồ sơ của bạn:</h6>
+ <a class="btn btn-primary btn-sm" asp-area="" asp-controller="Home" asp-action="Logout"> 
+                    <i class="ci-sign-out me-2"></i>Đăng xuất 
+                </a> 
+            </div> 
+            @if (TempData["ThongBao"] != null) 
+            { 
+                <div class="alert alert-success" role="alert"> 
+                    <i class="ci-check-circle me-2"></i>@TempData["ThongBao"] 
+                </div> 
+            } 
+            <form asp-action="CapNhatHoSo" class="needs-validation" novalidate> 
+                <input type="hidden" asp-for="ID" /> 
+                <div class="bg-secondary rounded-3 p-4 mb-4"> 
+                    <div class="d-flex align-items-center"> 
+                        <img class="rounded" src="~/img/avatar.jpg" width="90" /> 
+                        <div class="ps-3"> 
+                            <button class="btn btn-light btn-shadow btn-sm mb-2" type="button"> 
+                                <i class="ci-loading me-2"></i>Đổi ảnh đại diện 
+                            </button> 
+                            <div class="p mb-0 fs-ms text-muted">Tải lên hình ảnh JPG, GIF hoặc PNG. Yêu cầu kích thước 300x300.</div> 
+                        </div> 
+                    </div> 
+                </div> 
+                <div class="row gx-4 gy-3"> 
+                    <div class="col-12"> 
+                        <label asp-for="HoVaTen" class="form-label"></label> 
+                        <input asp-for="HoVaTen" class="form-control" required /> 
+                        <span asp-validation-for="HoVaTen" class="text-danger invalid-feedback"></span> 
+                    </div> 
+                    <div class="col-sm-6"> 
+                        <label asp-for="Email" class="form-label"></label> 
+                        <input asp-for="Email" class="form-control" /> 
+                        <span asp-validation-for="Email" class="text-danger invalid-feedback"></span> 
+                    </div> 
+                    <div class="col-sm-6"> 
+                        <label asp-for="DienThoai" class="form-label"></label> 
+                        <input asp-for="DienThoai" class="form-control" /> 
+                        <span asp-validation-for="DienThoai" class="text-danger invalid-feedback"></span> 
+                    </div> 
+                    <div class="col-sm-6"> 
+                        <label asp-for="DiaChi" class="form-label"></label> 
+                        <input asp-for="DiaChi" class="form-control" /> 
+                        <span asp-validation-for="DiaChi" class="text-danger invalid-feedback"></span> 
+                    </div> 
+                    <div class="col-sm-6"> 
+                        <label asp-for="TenDangNhap" class="form-label"></label> 
+                        <input asp-for="TenDangNhap" class="form-control" readonly required /> 
+                        <span asp-validation-for="TenDangNhap" class="text-danger invalid-feedback"></span> 
+                    </div> 
+                    <div class="col-sm-6"> 
+                        <label asp-for="MatKhau" class="form-label"></label> 
+                        <div class="password-toggle"> 
+                            <input asp-for="MatKhau" class="form-control" /> 
+                            <label class="password-toggle-btn" aria-label="Hiện/ẩn mật khẩu">
+                                <input class="password-toggle-check" type="checkbox" />
+                                <span class="password-toggle-indicator"></span>
+                            </label>
+                        </div>
+                        <span asp-validation-for="MatKhau" class="text-danger invalid-feedback"></span>
+                    </div>
+                    <div class="col-sm-6">
+                        <label asp-for="XacNhanMatKhau" class="form-label"></label>
+                        <div class="password-toggle">
+                            <input asp-for="XacNhanMatKhau" class="form-control" />
+                            <label class="password-toggle-btn" aria-label="Hiện/ẩn mật khẩu">
+                                <input class="password-toggle-check" type="checkbox" />
+                                <span class="password-toggle-indicator"></span>
+                            </label>
+                        </div>
+                        <span asp-validation-for="XacNhanMatKhau" class="text-danger invalid-feedback"></span>
+                    </div>
+                    <div class="col-12">
+                        <hr class="mt-2 mb-3">
+                        <div class="d-flex flex-wrap justify-content-between align-items-center">
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" id="SubscribeMe" checked />
+                                <label class="form-check-label" for="SubscribeMe">Đăng ký nhận thông báo từ cửa hàng.</label>
+                            </div>
+                            <button class="btn btn-primary mt-3 mt-sm-0" type="submit"><i class="ci-check-circle me-2"></i>Cập nhật hồ sơ</button>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </section>
     </div>
 </div>
